--- a/encrypt.html
+++ b/encrypt.html
@@ -36,17 +36,17 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">PGP Tools</a>
+    <a class="navbar-brand" href="/">PGP Tools</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Encrypt <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/encrypt.html">Encrypt <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">More to come.</a>
+          <a class="nav-link" href="">More to come.</a>
         </li>
       </ul>
     </div>
