--- a/index.html
+++ b/index.html
@@ -42,11 +42,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-        </li>
         <li class="nav-item">
-          <a class="nav-link" href="/encrypt.html">Encrypt</a>
+          <a class="nav-link" href="/encrypt.html">Encrypt <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">More to come.</a>
