--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </nav>
   <div class="main">
     <h1 class="display-4">BrowserPGP</h1>
-    <a>A little project that makes using PGP in a browser safe and secure.</a>
+    <a>A little project that makes using PGP in a browser easy and secure. Work in progress!</a>
   </div>
 </body>
 </html>
