--- a/encrypt.html
+++ b/encrypt.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Encrypt PGP</title>
+  <title>BrowserPGP | Encrypt</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <script src="openpgp.min.js"></script>
   <script>
@@ -43,7 +43,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="/encrypt.html">Encrypt <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/encrypt.html">Encrypt</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/gen.html">Key Generator</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="">More to come.</a>
