--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
           <a class="nav-link" href="/encrypt.html">Encrypt <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/gen.html">Key Generator</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#">More to come.</a>
         </li>
       </ul>
