--- a/encrypt.html
+++ b/encrypt.html
@@ -36,7 +36,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">PGP Tools</a>
+    <a class="navbar-brand" href="/">BrowserPGP</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -44,6 +44,9 @@
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="/encrypt.html">Encrypt</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/encrypt.html">Decrypt</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/gen.html">Key Generator</a>
