--- a/gen.html
+++ b/gen.html
@@ -46,6 +46,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/encrypt.html">Encrypt</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/encrypt.html">Decrypt</a>
+        </li>
         <li class="nav-item active">
           <a class="nav-link" href="/gen.html">Key Generator</a>
         </li>
@@ -77,7 +80,7 @@
           <div class="form-group progress">
             <div class="progress-bar" role="progressbar" id="progressbar" style="width: 100%"></div>
           </div>
-          <small id="emailHelp" class="form-text text-danger">This may take some time and cause browser to lag.</small>
+          <small id="emailHelp" class="form-text text-danger">This may take some time and cause browser lag.</small>
           <br>
           <div class="form-group">
             <button type="button" onclick="encryptDecryptFunction()" class="btn btn-primary">Encrypt</button>
