--- a/index.html
+++ b/index.html
@@ -36,14 +36,17 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">PGP Tools</a>
+    <a class="navbar-brand" href="/">BrowserPGP</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/encrypt.html">Encrypt <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/encrypt.html">Encrypt</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/encrypt.html">Decrypt</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/gen.html">Key Generator</a>
