--- a/decrypt.html
+++ b/decrypt.html
@@ -49,7 +49,7 @@
           <a class="nav-link" href="/encrypt.html">Encrypt</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/encrypt.html">Decrypt</a>
+          <a class="nav-link" href="/decrypt.html">Decrypt</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/gen.html">Key Generator</a>
