--- a/encrypt.html
+++ b/encrypt.html
@@ -46,7 +46,7 @@
           <a class="nav-link" href="/encrypt.html">Encrypt</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/encrypt.html">Decrypt</a>
+          <a class="nav-link" href="/decrypt.html">Decrypt</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/gen.html">Key Generator</a>
