--- a/encrypt.html
+++ b/encrypt.html
@@ -69,7 +69,7 @@
         <div class="col-sm">
           <div class="form-group">
             <label for="exampleFormControlTextarea1">Input Text</label>
-            <textarea class="form-control" id="text" rows="5" placeholder="So basically, monky."></textarea>
+            <textarea class="form-control" id="text" rows="5" placeholder="So basically, I'm monky."></textarea>
           </div>
           <button type="button" onclick="encryptDecryptFunction()" class="btn btn-primary">Encrypt</button>
         </div>
