--- a/encrypt.html
+++ b/encrypt.html
@@ -62,12 +62,12 @@
     </div>
   </nav>
   <div class="main">
-    <div class="container-fluid" style="height:100%;">
-      <div class="row" style="height:100%;">
-        <div class="col-sm" style="height:100%;">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm">
           <div class="form-group">
             <label for="exampleFormControlTextarea1">Public Key</label>
-            <textarea class="form-control" style="font-size: 10px;height:100%;" id="pubKey" placeholder="-----BEGIN PGP PUBLIC KEY BLOCK-----"></textarea>
+            <textarea class="form-control" style="font-size: 10px;" rows="10" id="pubKey" placeholder="-----BEGIN PGP PUBLIC KEY BLOCK-----"></textarea>
           </div>
         </div>
         <div class="col-sm">
@@ -77,10 +77,10 @@
           </div>
           <button type="button" onclick="encryptDecryptFunction()" class="btn btn-primary">Encrypt</button>
         </div>
-        <div class="col-sm" style="height:100%;">
+        <div class="col-sm">
           <div class="form-group">
             <label for="exampleFormControlTextarea1">PGP Output</label>
-            <textarea class="form-control" style="font-size: 10px;height:100%;" id="result" placeholder="-----BEGIN PGP MESSAGE-----" readonly></textarea>
+            <textarea class="form-control" style="font-size: 10px;" rows="10" id="result" placeholder="-----BEGIN PGP MESSAGE-----" readonly></textarea>
           </div>
         </div>
       </div>
