--- a/gen.html
+++ b/gen.html
@@ -65,7 +65,7 @@
   <div class="main">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-3">
+        <div class="col-sm">
           <div class="form-group">
             <label for="exampleInputEmail1">Name</label>
             <input type="text" class="form-control" id="name" placeholder="Enter name">
