--- a/gen.html
+++ b/gen.html
@@ -89,8 +89,15 @@
           <div class="form-group">
             <button type="button" onclick="encryptDecryptFunction()" class="btn btn-primary">Encrypt</button>
           </div>
-          <div class="form-group">
-            <a>This tool generates a 4096 bit RSA pair of PGP keys. The private key should be backed up in a secure private way. The public key can be shared publicly. These keys can be used for signing, encrypting, and decrypting texts, e-mails, files and directories.</a>
+          <p>
+            <a class="btn btn-secondary" data-toggle="collapse" href="#collapseExample" role="button">
+              About
+            </a>
+          </p>
+          <div class="collapse" id="collapseExample">
+            <div class="card card-body">
+              This tool generates a 4096 bit RSA pair of PGP keys. The private key should be backed up in a secure private way. The public key can be shared publicly. These keys can be used for signing, encrypting, and decrypting texts, e-mails, files and directories.
+            </div>
           </div>
         </div>
         <div class="col-sm">
