--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
   <div class="main">
     <h1 class="display-4">BrowserPGP</h1>
     <a>A little project that makes using PGP in a browser easy and secure. Work in progress!</a>
+    <img src="pgp.png"></img>
   </div>
 </body>
 </html>
