--- a/gen.html
+++ b/gen.html
@@ -87,7 +87,7 @@
           <small id="emailHelp" class="form-text text-danger">This may take some time and cause browser lag.</small>
           <br>
           <div class="form-group">
-            <button type="button" onclick="encryptDecryptFunction()" class="btn btn-primary">Encrypt</button>
+            <button type="button" onclick="encryptDecryptFunction()" class="btn btn-primary">Generate</button>
           </div>
           <p>
             <a class="btn btn-secondary" data-toggle="collapse" href="#collapseExample" role="button">
