--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">
-      <img src="/logo_s.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+      <img src="/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
       browserPGP
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
