--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
   </nav>
   <div class="main">
     <h1 class="display-4">browserPGP</h1>
-    <a>A little project that makes using PGP in a browser easy and secure. Work in progress!</a>
-    <br>
+    <a>A website that makes using PGP simple and secure. All work is done client side, so no private data leaves your computer.<br><br>If you want to be extra secure, disable internet while using this site.</a>
+    <br><br>
     <img src="pgp.png">
   </div>
 </body>
