--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </nav>
   <div class="main">
     <h1 class="display-4">browserPGP</h1>
-    <a>A website that makes using PGP simple and secure. All work is done client side, so no private data leaves your computer.<br><br>If you want to be extra secure, disable internet while using this site.</a>
+    <a>A website that makes using PGP simple and secure. All work is done client side, so no private data leaves your computer.<br><br>If you want to be extra secure, disable internet while using this site.<br><br>- ar0n#1462</a>
     <br><br>
     <img src="pgp.png">
   </div>
