--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 <script src="openpgp.min.js"></script>
 <script>
 if (typeof openpgp.config === "object") {
-  document.getElementById('worksCheck').insertAdjacentHTML('beforeend', '<br><div class="alert alert-success" role="alert">' + openpgp.config.versionstring + ' is functioning.</div>');
+  document.getElementById('worksCheck').insertAdjacentHTML('beforeend', '<br><div class="alert alert-success" role="alert">' + openpgp.config.versionstring + ' works in this browser!</div>');
 } else {
-  document.getElementById('worksCheck').insertAdjacentHTML('beforeend', '<br><div class="alert alert-success" role="alert">OpenPGP.js won\'t start.</div>');
+  document.getElementById('worksCheck').insertAdjacentHTML('beforeend', '<br><div class="alert alert-success" role="alert">OpenPGP.js won\'t start in this browser.</div>');
 }
 </script>
 </html>
