--- a/gen.html
+++ b/gen.html
@@ -2,7 +2,7 @@
 <head>
   <title>browserPGP | Key Gen</title>
   <meta name="description" content="Generate PGP keys in browser, simple and secure.">
-  <meta name="keywords" content="PGP,online,browser,javascript,github,live,secure,key generator,encrypt,decrypt,sign,verify">
+  <meta name="keywords" content="browserPGP,PGP,online,browser,javascript,github,live,secure,key generator,encrypt,decrypt,sign,verify">
   <meta name="author" content="ar0n#1462">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -93,6 +93,9 @@
           </div>
           <small id="emailHelp" class="form-text text-danger">This may take some time and cause browser lag.</small>
           <br>
+          <div class="form-group progress">
+            <div class="progress-bar" role="progressbar" id="progressbar" style="width: 100%"></div>
+          </div>
           <div class="form-group">
             <button type="button" onclick="encryptDecryptFunction()" class="btn btn-primary">Generate</button>
           </div>
