--- a/decrypt.html
+++ b/decrypt.html
@@ -12,7 +12,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="openpgp.min.js"></script>
   <script>
-
   openpgp.initWorker({ path:'openpgp.worker.min.js' }) // set the relative web worker path
 
   const encryptDecryptFunction = async() => {
@@ -60,16 +59,19 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
+          <a class="nav-link" href="/gen.html">Key Generator</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/encrypt.html">Encrypt</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="/decrypt.html">Decrypt</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/gen.html">Key Generator</a>
+          <a class="nav-link" href="/sign.html">Sign</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">More to come.</a>
+          <a class="nav-link" href="/verify.html">Verify</a>
         </li>
       </ul>
     </div>
