--- a/gen.html
+++ b/gen.html
@@ -54,17 +54,20 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="/gen.html">Key Generator</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="/encrypt.html">Encrypt</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/decrypt.html">Decrypt</a>
         </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="/gen.html">Key Generator</a>
+        <li class="nav-item">
+          <a class="nav-link" href="/sign.html">Sign</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">More to come.</a>
+          <a class="nav-link" href="/verify.html">Verify</a>
         </li>
       </ul>
     </div>
