--- a/encrypt.html
+++ b/encrypt.html
@@ -2,7 +2,7 @@
 <head>
   <title>browserPGP | Encrypt</title>
   <meta name="description" content="Encrypt PGP in browser, simple and secure.">
-  <meta name="keywords" content="browserPGP,PGP,online,browser,javascript,github,live,secure,key generator,encrypt,decrypt,sign,verify">
+  <meta name="keywords" content="browserPGP,PGP,OpenPGP,online,browser,javascript,github,live,secure,key generator,key gen,encrypt,decrypt,sign,verify,signature">
   <meta name="author" content="ar0n#1462">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
