--- a/encrypt.html
+++ b/encrypt.html
@@ -86,6 +86,9 @@
             <label for="exampleFormControlTextarea1">Input Text</label>
             <textarea class="form-control" id="text" rows="5" placeholder="Secret Message"></textarea>
           </div>
+          <div class="form-group progress">
+            <div class="progress-bar" role="progressbar" id="progressbar" style="width: 100%"></div>
+          </div>
           <button type="button" onclick="encryptDecryptFunction()" class="btn btn-primary">Encrypt</button>
         </div>
         <div class="col-sm">
