--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <a>This website doesn't generate any revenue, any donations would be appreciated.<br><br>Bitcoin: 174pY2VP3VxhWNFcNsnYJz2eAKVySxr4jr<br>Bitcoin Cash: 1C6XvFHtxZ2PvctJ5hLY8VCgVioMnLVSte<br>Litecoin: LNq5sNAfs2MdpHoqkwJs71eBeJA91itybd<br>Dogecoin: DB2GW7Dad5z8RPuJjzG2i24PbNgpaE1G1k</a>
     <br>
     <div id="worksCheck"></div>
+    <noscript><br><div class="alert alert-danger" role="alert">This website requires JavaScript to function, please enable it.</div></noscript>
     <br>
     <img src="pgp.png">
   </div>
