--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div id="worksCheck"></div>
     <noscript><br><div class="alert alert-danger" role="alert">This website requires JavaScript to function, please enable it.</div></noscript>
     <br>
-    <img src="pgp.png">
+    <img class="img-fluid" src="pgp.png">
   </div>
 </body>
 <script src="openpgp.min.js"></script>
