--- a/verify.html
+++ b/verify.html
@@ -20,21 +20,20 @@
     const pubkey = document.getElementById("pubKey").value
     const cleartext = document.getElementById("signMsg").value
 
-    let options;
-    try {
-      options = {
-          message: await openpgp.cleartext.readArmored(cleartext), // parse armored message
-          publicKeys: (await openpgp.key.readArmored(pubkey)).keys // for verification
-      }
-    } catch (err) {
-      document.getElementById("result").value = err.message;
-      document.getElementById("progressbar").className = "progress-bar bg-danger";
+    options = {
+      message: await openpgp.cleartext.readArmored(cleartext).catch((err) => {document.getElementById("result").value = err.message;document.getElementById("progressbar").className = "progress-bar bg-danger";}), // parse armored message
+      publicKeys: (await openpgp.key.readArmored(pubkey).catch((err) => {document.getElementById("result").value = err.message;document.getElementById("progressbar").className = "progress-bar bg-danger";})).keys // for verification
     }
 
     openpgp.verify(options).then(function(verified) {
     	validity = verified.signatures[0].valid; // true
-    	document.getElementById("result").value = 'Signed by key id ' + verified.signatures[0].keyid.toHex();
-      document.getElementById("progressbar").className = "progress-bar bg-success";
+      if (validity) {
+    	   document.getElementById("result").value = 'Signed by key id ' + verified.signatures[0].keyid.toHex() + '. Signature is valid!';
+         document.getElementById("progressbar").className = "progress-bar bg-success";
+      } else {
+        document.getElementById("result").value = 'Not signed by key id ' + verified.signatures[0].keyid.toHex() + '. Do not trust!';
+        document.getElementById("progressbar").className = "progress-bar bg-danger";
+      }
     }).catch(function(error){
       document.getElementById("result").value = error.message;
       document.getElementById("progressbar").className = "progress-bar bg-danger";
