--- a/encrypt.html
+++ b/encrypt.html
@@ -19,15 +19,9 @@
     // put keys in backtick (``) to avoid errors caused by spaces or tabs
     const pubkey = document.getElementById("pubKey").value
 
-    let options;
-    try {
-      options = {
-        message: openpgp.message.fromText(document.getElementById("text").value),       // input as Message object
-        publicKeys: (await openpgp.key.readArmored(pubkey)).keys, // for encryption
-      }
-    } catch (err) {
-      document.getElementById("result").value = err.message;
-      document.getElementById("progressbar").className = "progress-bar bg-danger";
+    const options = {
+      message: openpgp.message.fromText(document.getElementById("text").value).catch((err) => {document.getElementById("result").value = err.message;document.getElementById("progressbar").className = "progress-bar bg-danger";}),       // input as Message object
+      publicKeys: (await openpgp.key.readArmored(pubkey).catch((err) => {document.getElementById("result").value = err.message;document.getElementById("progressbar").className = "progress-bar bg-danger";})).keys, // for encryption
     }
 
     openpgp.encrypt(options).then(ciphertext => {
