--- a/encrypt.html
+++ b/encrypt.html
@@ -20,7 +20,7 @@
     const pubkey = document.getElementById("pubKey").value
 
     const options = {
-      message: openpgp.message.fromText(document.getElementById("text").value).catch((err) => {document.getElementById("result").value = err.message;document.getElementById("progressbar").className = "progress-bar bg-danger";}),       // input as Message object
+      message: openpgp.message.fromText(document.getElementById("text").value),       // input as Message object
       publicKeys: (await openpgp.key.readArmored(pubkey).catch((err) => {document.getElementById("result").value = err.message;document.getElementById("progressbar").className = "progress-bar bg-danger";})).keys, // for encryption
     }
 
