--- a/encrypt.html
+++ b/encrypt.html
@@ -56,6 +56,9 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
+          <a class="nav-link" href="/">About</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/gen.html">Key Generator</a>
         </li>
         <li class="nav-item active">
