--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">About</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="/gen.html">Key Generator</a>
         </li>
