--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>browserPGP</title>
   <meta charset="UTF-8">
-  <meta name="description" content="PGP in browser, simple and secure.">
+  <meta name="description" content="PGP in browser, simple and secure." />
   <meta name="keywords" content="browserPGP,PGP,OpenPGP,online,browser,javascript,github,live,secure,key generator,key gen,encrypt,decrypt,sign,verify,signature">
   <meta name="author" content="ar0n#1462">
 
