--- a/sign.html
+++ b/sign.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>browserPGP | Sign</title>
-  <meta name="description" content="Sign PGP in browser, simple and secure.">
+  <meta name="description" content="Sign PGP in browser, simple and secure." />
   <meta name="keywords" content="browserPGP,PGP,OpenPGP,online,browser,javascript,github,live,secure,key generator,key gen,encrypt,decrypt,sign,verify,signature">
   <meta name="author" content="ar0n#1462">
 
