--- a/decrypt.html
+++ b/decrypt.html
@@ -81,6 +81,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/verify.html">Verify</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/compatibility.html">Compatibility</a>
+        </li>
       </ul>
     </div>
   </nav>
