--- a/compatibility.html
+++ b/compatibility.html
@@ -38,6 +38,9 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
+          <a class="nav-link" href="/">About</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/gen.html">Key Generator</a>
         </li>
         <li class="nav-item">
@@ -51,6 +54,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/verify.html">Verify</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/compatibility.html">Compatibility</a>
         </li>
       </ul>
     </div>
