--- a/verify.html
+++ b/verify.html
@@ -80,6 +80,9 @@
         <li class="nav-item active">
           <a class="nav-link" href="/verify.html">Verify</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/compatibility.html">Compatibility</a>
+        </li>
       </ul>
     </div>
   </nav>
