--- a/compatibility.html
+++ b/compatibility.html
@@ -55,7 +55,7 @@
         <li class="nav-item">
           <a class="nav-link" href="/verify.html">Verify</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="/compatibility.html">Compatibility</a>
         </li>
       </ul>
