--- a/index.html
+++ b/index.html
@@ -59,15 +59,22 @@
     </div>
   </nav>
   <div class="main">
-    <h1 class="display-4">browserPGP</h1>
-    <p>A website that makes using PGP simple and secure. All work is done client side, so no private data leaves your computer.<br><br>If you want to be extra secure, disable internet and go incognito while using this site.<br><br>- ar0n#1462</p>
-    <br>
-    <h1 class="display-4">Donate</h1>
-    <p>This website doesn't generate any revenue, any donations would be appreciated.<br><br>Bitcoin: <code>174pY2VP3VxhWNFcNsnYJz2eAKVySxr4jr</code><br>Bitcoin Cash: <code>1C6XvFHtxZ2PvctJ5hLY8VCgVioMnLVSte</code><br>Litecoin: <code>LNq5sNAfs2MdpHoqkwJs71eBeJA91itybd</code><br>Dogecoin: <code>DB2GW7Dad5z8RPuJjzG2i24PbNgpaE1G1k</code></p>
-    <div id="worksCheck"></div>
-    <noscript><br><div class="alert alert-danger" role="alert">This website requires JavaScript to function, please enable it.</div></noscript>
-    <br>
-    <img class="img-fluid" src="pgp.png">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <h1 class="display-4">browserPGP</h1>
+          <p>A website that makes using PGP simple and secure. All work is done client side, so no private data leaves your computer.<br><br>If you want to be extra secure, disable internet and go incognito while using this site.<br><br>- ar0n#1462</p>
+          <div id="worksCheck"></div>
+          <h1 class="display-4">Donate</h1>
+          <p>Provided services are free. You can support me by donating cryptocurrency! :-)<br><br>Bitcoin: <code>174pY2VP3VxhWNFcNsnYJz2eAKVySxr4jr</code><br>Bitcoin Cash: <code>1C6XvFHtxZ2PvctJ5hLY8VCgVioMnLVSte</code><br>Litecoin: <code>LNq5sNAfs2MdpHoqkwJs71eBeJA91itybd</code><br>Dogecoin: <code>DB2GW7Dad5z8RPuJjzG2i24PbNgpaE1G1k</code><br><br>Or you can just <a href="https://www.buymeacoffee.com/ar0n">buy me a coffee ☕</a> instead.</p>
+          <noscript><br><div class="alert alert-danger" role="alert">This website requires JavaScript to function, please enable it.</div></noscript>
+        </div>
+        <div class="col-sm">
+          <img class="img-fluid" src="pgp.png">
+          <p class="text-center text-muted"><small>PGP encrypt/decrypt diagram</small></p>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 <script src="openpgp.min.js"></script>
