--- a/lookup.html
+++ b/lookup.html
@@ -67,7 +67,7 @@
         <li class="nav-item">
           <a class="nav-link" href="/encrypt.html">Encrypt</a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="/decrypt.html">Decrypt</a>
         </li>
         <li class="nav-item">
