--- a/sign.html
+++ b/sign.html
@@ -13,6 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="prngCheck.js"></script>
   <script src="favicon.js"></script>
+  <script src="sha1.min.js"></script>
   <script src="openpgp.min.js"></script>
   <script>
 
